--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.0-rc.1",
+    "remove-accents": "^0.4.4",
+    "styled-components": "^5.3.10",
+    "styled-reset": "^4.4.7",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
